--- a/main.css
+++ b/main.css
@@ -103,9 +103,13 @@ img {
 }
 
 .address__item {
-    display: inline-block;
+    display: inline-flex;
     vertical-align: middle;
     margin-right: 44px;
+}
+
+.address__link--active {
+    color: #DA0100;
 }
 
 .address__item:last-child {
@@ -151,7 +155,7 @@ margin-right: 0;
 }  
 
 .button {
-    display: inline-block;
+    display: inline-flex;
     background-color: #F5170E;
     border-radius: 25px;
     padding: 18px 40px;
@@ -173,37 +177,35 @@ margin-right: 0;
     justify-content: space-between;
 }
 
-.tours__header {
-    display: inline-block;
-    
+.tours {
+    margin-bottom: 125px;
 }
 
-.tours {
-    margin-bottom: 130px;
+.tours__title::after {
+    content: url(./img/flame.png);
+    margin-left: 15px;
 }
 
 .tours__title {
     font-size: 36px;
     margin-bottom: 52px;
-    width: 273px;
-    margin-right: 12px;
-    display: inline-block;  
+    margin-right: 12px; 
     line-height: 1.3;
+    width: 320px;
 }
 
 .tours__pic {
     border-radius: 5px 5px 0 0;
 }
 
-.tours__icons {
-   display: inline-block; 
-}
 
 .tours__item {
     min-height: 449px;
     background: #FFFFFF;
     border-radius: 5px;
     width: calc(100% /3 - 18px);
+    display: flex;
+    flex-direction: column;
 }
 
 
@@ -229,10 +231,15 @@ margin-right: 0;
     margin-bottom: 21px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .tours__content {
     padding: 34px 38px 26px 22px;
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+
 }
 
 
@@ -242,20 +249,19 @@ margin-right: 0;
 }
 
 .tours__option-img1   {
-    display: inline-block;
-    vertical-align: middle;
+    display: inline-flex;
     
 }
 
 .tours__option-img2   {
-    display: inline-block;
-    vertical-align: middle;
+    display: inline-flex;
+    
 }
 
 .tours__indent {
     font-size: 16px;
     color: #666666;
-    display: inline-block;
+    display: inline-flex;
     line-height: 36px;
     margin-left: 7px;
 }
@@ -271,6 +277,8 @@ margin-right: 0;
     background: #FFFFFF;
     padding: 16px 29px;
     border: 1px solid #F5170E ;
+    margin-top: auto;
+    align-self: flex-start;
 }
 
 .button_style_transparent:hover {
@@ -453,6 +461,7 @@ margin-right: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    background: #001821;
 }
 
 .footer__col {
@@ -544,10 +553,16 @@ margin-right: 0;
 .reviews{
     column-count: 2;
     column-gap: 30px;
+    margin-bottom: 76px;
+}
+
+.warapper__reviews {
+    background: #FFF;
 }
 
 .reviews__item {
-    margin-bottom: 2px;
+    margin-bottom: 17px;
+    background: #F4F5F5;
 }
 
 .reviews__item p {
@@ -562,6 +577,11 @@ margin-right: 0;
     display: inline-flex;
     flex-direction: column;
     padding: 50px 30px; 
+    border-radius: 5px;
+}
+
+.review__photo {
+    margin-right: 22px;
 }
 
 .avatar {
@@ -569,7 +589,6 @@ margin-right: 0;
     height: 140px;
     overflow: hidden;
     border-radius: 50%;
-    margin-right: 22px;
 }
 
 
@@ -590,9 +609,14 @@ margin-right: 0;
    margin-bottom: 4px;
 }
 
+.review__user:hover {
+    color: #2E77A4;
+    text-decoration: underline;
+}
+
 .review__user::after {
     content: url(./img/vk-blue\ 1.png);
-    height: 35px;
+    height: 25px;
     margin-left: 8px;
 }
 
@@ -653,10 +677,11 @@ margin-right: 0;
     margin-bottom: 28px;
 }
 
+
+
 .separator {
     display: flex;
-    background: url(./img/Rectangle.png) center no-repeat;
-    min-height: 363px;
+    background: url(./img/Rectangle.png) center center / cover no-repeat;
     flex-direction: column;
     justify-content: center;
 }
@@ -672,10 +697,13 @@ margin-right: 0;
     line-height: 65px;
 }
 
+
+
 .inner-section {
     padding-top: 62px;
     background: #F4F5F5;
     color: #000;
+    padding-bottom: 96px;
 }
 
 .inner__title {
@@ -687,8 +715,18 @@ margin-right: 0;
 
 .form__row {
     display: flex;
+    flex: 1;
     margin-bottom: 15px;
 }
+
+.form__row:last-child {
+    margin-bottom: 50px;
+}
+
+.row {
+    display: flex;
+}
+
 
 .form__input {
     flex: 1;
@@ -700,17 +738,21 @@ margin-right: 0;
     color: #1A1B1E;
     font-size: 18px;
     line-height: 25px;
-    width: 553px;
-    border: 1px solid #FFF;
+    width: 100%;
+    border: 1px solid transparent;
     margin-bottom: 26px;
+}
+
+.form__input:focus {
+    border-color:  #F5170E;
+}
+
+.row:last-child {
+    margin-bottom: 15px;
 }
 
 .form__input::placeholder{
     color: #666;
-}
-
-.form__input--active:hover {
-    border: 1px solid #F5170E;
 }
 
 .form__input:last-child {
@@ -720,7 +762,6 @@ margin-right: 0;
 .form__input--textarea {
     height: 235px;
     width: 1140px;
-    margin-bottom: 50px;
 }
 
 .form__controls {
@@ -730,6 +771,8 @@ margin-right: 0;
 
 .form__controls-title {
     width: 40%;
+    padding-top: 5px;
+    padding-left: 5px;
 }
 
 .controls {
@@ -764,7 +807,7 @@ margin-right: 0;
 }
 
 .controls__item {
-    margin-top: 10px;
+    margin-bottom: 10px;
     margin-right: 10px;
 }
 
@@ -786,7 +829,6 @@ margin-right: 0;
 .form__btns {
     display: flex;
     justify-content: flex-end;
-    padding-bottom: 96px;
 }
 
 .form__btn:last-child {
@@ -804,7 +846,7 @@ margin-right: 0;
     height: 100%;
     align-items: center;
     justify-content: center;
-    background: url(./img/bg.png) center bottom / cover no-repeat;
+    background: url(./img/bg.png) center center / cover no-repeat;
 }
 
 .center {
