--- a/services.css
+++ b/services.css
@@ -1,5 +1,5 @@
 .top-line {
-    min-height: 415px;
+    min-height: 410px;
     background: url(img/topline.png) top   right 42% no-repeat;
     display: flex;
     flex-direction: column;
@@ -51,7 +51,7 @@
 }
 
 .page-content {
-    background: #F2F2F2;
+    background: #FFF;
     color: #000;
     padding: 50px 0;
 }
@@ -66,7 +66,7 @@
 }
 
 .service__img {
-    width: 30%;
+    width: 40.3%;
     margin-right: 7%;
 }
 
@@ -117,19 +117,13 @@
 .partners-list {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .partners__item {
-    margin-left: 75px;
+    margin-bottom : 75px;
 }
 
-.partners__item:nth-child(4n+1) {
-    margin-left: 0;
-}
-
-.partners__item:nth-child(4) {
-    margin-left: 145px;
-}
 
 .partners__title {
     font-style: normal;
@@ -140,12 +134,10 @@
 }
 
 .partners__link {
+    width: 250px;
     display: flex;
-    width: 240x;
-    height: 100px;
-    align-items: center;
-    justify-content: center;
-    filter: grayscale(100%);
+    align-items: center;    
+    
 }
 
 .partners__link:hover {
@@ -158,4 +150,5 @@
 
 .footer-service {
     margin-top: auto;
+    background: #001821;
 }
